crates/server-less/tests/fixtures/serverless_error_on_struct.stderr
error: ServerlessError can only be derived for enums

       Hint: Define your errors as an enum:

       #[derive(Debug, ServerlessError)]
       enum MyError {{
       #[error(code = NotFound)]
       NotFound,
       }}

       ServerlessError maps to HTTP status codes (e.g. code = 404) and JSON-RPC error codes automatically across protocols.
 --> tests/fixtures/serverless_error_on_struct.rs:5:1
  |
5 | / struct MyError {
6 | |     code: u32,
7 | |     message: String,
8 | | }
  | |_^
