crates/server-less/tests/fixtures/serverless_error_on_struct.rs
use server_less::ServerlessError;

// ServerlessError can only be derived for enums, not structs.
#[derive(Debug, ServerlessError)]
struct MyError {
    code: u32,
    message: String,
}

fn main() {}
